--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,6 @@ importFrom(stats,dist)
 importFrom(stats,median)
 importFrom(stats,rgamma)
 importFrom(stats,rnorm)
+importFrom(utils,setTxtProgressBar)
 importFrom(utils,tail)
+importFrom(utils,txtProgressBar)
